# PythonLab

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt  ruff.toml
RequestsHttpxAiohttp/: README.md
UnitTest/: README.md  test_uut.py
UnitTest/app/: decorators.py  uut.py
apispec_example/: Makefile  README.md  example.py  swagger.json
celery-fail-demo/: README.md  celery_app.py  main.py  requirements-lock.txt
collision/: collision.py
diagrams_example/: aws_grouped_workers.py
dspy-ai/: README.md  main.py  requirements.in  requirements.txt
elasticsearch-dsl-example/: README.md  dockerfile  makefile
elasticsearch-dsl-example/src/: persistence.py  persistence_example.py
elasticsearch-dsl-example/src/aggregation/: create_dataset.py
elasticsearch-dsl-example/src/search/: search.py
elasticsearch-dsl-py/: README.md  makefile  requirements.txt
elasticsearch-dsl-py/src/: persistence_example.py
excel_output_benchmark/: Untitled.ipynb
fastapi/: main.py
gRPC-python-example/: README.md  myservice.protoset
gRPC-python-example/grpc_output/: helloworld_pb2.py
gRPC-python-example/helloworld/: helloworld.proto
gRPC-python-example/mygrpc/route_guide/: route_guide.proto
marshmallow-example/: .python-version  README.md  self_relation.py  start.py
pylog/: README.md  multidemo.py
scrapling_test/: README.md  requirements.in  requirements.txt
silly-json/: README.md  data.py
stackqueue/: README.md  stackqueue.py  test_queue.py
tornado_long_pulling/: README.md  index.html  server.py
twid/: test_twid.py  twid.py
